kustomize/components/acc-ui/acc-ui-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acc-ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acc-ui
  template:
    metadata:
      labels:
        app: acc-ui
    spec:
      imagePullSecrets:
        - name: regcred
      containers:
        - name: acc-ui
          image: acc-ui
          resources:
            limits:
              memory: 512Mi
              cpu: 1000m
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/health/version
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 5
          startupProbe:
            httpGet:
              path: /api/health/version
              port: 8080
            failureThreshold: 30
            periodSeconds: 10
