kustomize/components/acc-ui/acc-ui.yml
apiVersion: v1
kind: Service
metadata:
  name: acc-ui-svc
spec:
  selector:
    app: acc-ui
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
