kustomize/components/acc-ui/acc-ui-route.yml
kind: Route
apiVersion: apps/v1
metadata:
  name: acc-ui-route
spec:
  host: www-acc.apps.ocp4.innovateuk.ukri.org
  port:
    targetPort: 8080
  to:
    kind: Service
    name: acc-ui-service
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
